--- a/Main.ipynb
+++ b/Main.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 105,
    "outputs": [],
    "source": [
     "class Father():\n",
@@ -70,16 +70,48 @@
     "        self.money = money\n",
     "        # super(Son3, self).__init__(wage, money)\n",
     "\n",
+    "class Son30(Father):\n",
+    "    def __init__(self,wage):\n",
+    "        self.wage = wage\n",
+    "        super(Son30, self).__init__(wage)\n",
+    "\n",
     "class Son31(Father):\n",
     "    def __init__(self,wage,money):\n",
     "        self.wage = wage\n",
     "        self.money = money\n",
     "        super(Son31, self).__init__(wage, money)\n",
     "\n",
+    "class Son32(Father):\n",
+    "    def __init__(self,wage,money,rename):\n",
+    "        self.wage = wage\n",
+    "        self.money = money\n",
+    "        self.rename = rename\n",
+    "        super(Son32, self).__init__(wage, money, rename)\n",
+    "\n",
+    "class Son33(Father):\n",
+    "    def __init__(self,wage,money,rename):\n",
+    "        super(Son33, self).__init__(wage, money, rename)\n",
+    "\n",
+    "class Son34(Father):\n",
+    "    def __init__(self,wage,money,rename):\n",
+    "        self.wage = wage\n",
+    "        self.money = money\n",
+    "        self.rename = rename\n",
+    "        super(Son34, self).__init__(wage, money, rename)\n",
+    "\n",
     "class Son4(Father):\n",
     "    def __init__(self, age, name):\n",
     "        super(Son4, self).__init__(name,age)\n",
-    "        self.age = age"
+    "        print(self.name)\n",
+    "        self.name= name\n",
+    "        print(self.name)\n",
+    "\n",
+    "class Son41(Father):\n",
+    "    def __init__(self, age, name):\n",
+    "        self.name= name\n",
+    "        print(self.name)\n",
+    "        super(Son41, self).__init__(name,age)\n",
+    "        print(self.name)"
    ],
    "metadata": {
     "collapsed": false,
@@ -90,14 +122,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 80,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "50\n",
-      "BB\n"
+      "blabla\n"
      ]
     }
    ],
@@ -115,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 81,
    "outputs": [
     {
      "name": "stdout",
@@ -144,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 82,
    "outputs": [
     {
      "name": "stdout",
@@ -160,7 +192,7 @@
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "\u001B[0;32m/var/folders/zx/xctpf9r50q9628v05ll3x86r0000gp/T/ipykernel_12250/3142938683.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[0mson2\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mSon2\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;36m23\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      2\u001B[0m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mson2\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mage\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 3\u001B[0;31m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mson2\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mname\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[0;32m/var/folders/zx/xctpf9r50q9628v05ll3x86r0000gp/T/ipykernel_37815/3142938683.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[0mson2\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mSon2\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;36m23\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      2\u001B[0m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mson2\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mage\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 3\u001B[0;31m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mson2\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mname\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
       "\u001B[0;31mAttributeError\u001B[0m: 'Son2' object has no attribute 'name'"
      ]
     }
@@ -258,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 83,
    "outputs": [
     {
      "name": "stdout",
@@ -270,13 +302,13 @@
     },
     {
      "ename": "AttributeError",
-     "evalue": "'Son3' object has no attribute 'salary'",
+     "evalue": "'Son3' object has no attribute 'gender'",
      "output_type": "error",
      "traceback": [
       "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "\u001B[0;32m/var/folders/zx/xctpf9r50q9628v05ll3x86r0000gp/T/ipykernel_12250/3613432984.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      2\u001B[0m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mson3a\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mwage\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      3\u001B[0m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mson3a\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mmoney\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 4\u001B[0;31m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mson3a\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0msalary\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m",
-      "\u001B[0;31mAttributeError\u001B[0m: 'Son3' object has no attribute 'salary'"
+      "\u001B[0;32m/var/folders/zx/xctpf9r50q9628v05ll3x86r0000gp/T/ipykernel_37815/3416904441.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      2\u001B[0m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mson3a\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mwage\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      3\u001B[0m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mson3a\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mmoney\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 4\u001B[0;31m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mson3a\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mgender\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      5\u001B[0m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mson3a\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mname\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      6\u001B[0m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mson3a\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0msalary\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mAttributeError\u001B[0m: 'Son3' object has no attribute 'gender'"
      ]
     }
    ],
@@ -284,6 +316,8 @@
     "son3a = Son3(23, 333)\n",
     "print(son3a.wage)\n",
     "print(son3a.money)\n",
+    "print(son3a.gender)\n",
+    "print(son3a.name)\n",
     "print(son3a.salary)"
    ],
    "metadata": {
@@ -295,23 +329,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 84,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "33\n",
-      "233\n",
-      "20000\n"
+      "blabla\n",
+      "233\n"
      ]
     }
    ],
    "source": [
     "son31a = Son31(33,233)\n",
-    "print(son31a.wage)\n",
-    "print(son31a.money)\n",
-    "print(son31a.salary)"
+    "print(son31a.age)\n",
+    "print(son31a.name)\n",
+    "print(son31a.gender)"
    ],
    "metadata": {
     "collapsed": false,
@@ -322,21 +356,186 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 86,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "33\n",
-      "233\n"
+      "1500\n",
+      "3000\n",
+      "cb\n",
+      "1500\n",
+      "3000\n",
+      "cb\n",
+      "20000\n"
      ]
     }
    ],
    "source": [
-    "print(son31a.age)\n",
-    "print(son31a.gender)"
+    "son32a = Son32(1500,3000,'cb')\n",
+    "print(son32a.wage)\n",
+    "print(son32a.money)\n",
+    "print(son32a.rename)\n",
+    "print(son32a.age)\n",
+    "print(son32a.gender)\n",
+    "print(son32a.name)\n",
+    "print(son32a.salary)"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "20\n",
+      "20000\n",
+      "20\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Son33' object has no attribute 'wage'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "\u001B[0;32m/var/folders/zx/xctpf9r50q9628v05ll3x86r0000gp/T/ipykernel_37815/2637414563.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      4\u001B[0m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mson33\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0msalary\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      5\u001B[0m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mson33\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mname\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m----> 6\u001B[0;31m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mson33\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mwage\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m      7\u001B[0m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mson33\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mmoney\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      8\u001B[0m \u001B[0mprint\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mson33\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mrename\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mAttributeError\u001B[0m: 'Son33' object has no attribute 'wage'"
+     ]
+    }
+   ],
+   "source": [
+    "son33 = Son33(20,20,20)\n",
+    "print(son33.gender)\n",
+    "print(son33.age)\n",
+    "print(son33.salary)\n",
+    "print(son33.name)\n",
+    "print(son33.wage)\n",
+    "print(son33.money)\n",
+    "print(son33.rename)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "20\n",
+      "20000\n",
+      "20\n",
+      "20\n",
+      "20\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "son34 = Son34(20,20,20)\n",
+    "print(son34.gender)\n",
+    "print(son34.age)\n",
+    "print(son34.salary)\n",
+    "print(son34.name)\n",
+    "print(son34.wage)\n",
+    "print(son34.money)\n",
+    "print(son34.rename)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "blabla\n",
+      "Jack\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "'Jack'"
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "son4 = Son4(23, 'Jack')\n",
+    "son4.age"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jack\n",
+      "blabla\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "'blabla'"
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "son41 = Son41(23, 'Jack')\n",
+    "son41.name"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -463,9 +662,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "outputs": [],
-   "source": [],
+   "source": [
+    "class Car():\n",
+    "    \"\"\"A simple attempt to represent a car.\"\"\"\n",
+    "\n",
+    "    def __init__(self, make, model, year):\n",
+    "        \"\"\"设置属性的初始值\"\"\"\n",
+    "        self.make = make\n",
+    "        self.model = model\n",
+    "        self.year = year\n",
+    "        self.odometer_reading=0\n",
+    "\n",
+    "\n",
+    "    def get_descriptive_name(self):\n",
+    "        \"\"\"Return a neatly formatted descriptive name.\"\"\"\n",
+    "        long_name = str(self.year) + ' ' + self.make + ' ' + self.model\n",
+    "        return long_name.title()\n",
+    "\n",
+    "    def read_odometer(self):\n",
+    "        \"\"\"Print a statement showing the car's mileage.\"\"\"\n",
+    "        print(\"This car has \" + str(self.odometer_reading) + \" miles on it.\")\n",
+    "\n",
+    "    def update_odometer(self, mileage):\n",
+    "        \"\"\"Set the odometer reading to the given value.\"\"\"\n",
+    "        self.odometer_reading = mileage\n",
+    "\n",
+    "    def increment_odometer(self, miles):\n",
+    "        \"\"\"Add the given amount to the odometer reading.\"\"\"\n",
+    "        self.odometer_reading += miles\n",
+    "\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -475,9 +703,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "outputs": [],
-   "source": [],
+   "source": [
+    "#ElectricCar子类，继承Car类（的属性和方法），可以定义自己的新属性和方法，还可以重写父类的方法\n",
+    "class ElectricCar(Car):\n",
+    "    \"\"\"模拟电动汽车的独特之处.\"\"\"\n",
+    "\n",
+    "    def __init__(self, manufacturer, my, damne, battery_size=70):\n",
+    "        \"\"\"初始化父类属性,再初始化电动汽车特有的属性.\"\"\"\n",
+    "        super().__init__(manufacturer, my, damne)\n",
+    "        self.battery = Battery(battery_size)# 属性battery是一个Battery类的实例\n",
+    "\n",
+    "    def describe_battery(self):\n",
+    "        \"\"\"打印一个描述电池大小的语句.\"\"\"\n",
+    "        print(\"This car has a \" + str(self.battery_size) + \"-kWh battery.\")\n",
+    "\n",
+    "\n",
+    "    def get_descriptive_name(self): #在子类中重写该方法\n",
+    "        \"\"\"返回一个整洁的格式化描述性名称.\"\"\"\n",
+    "        long_name = str(self.year) + ' ' + self.make + ' ' + self.model + ' ' + str(self. battery.battery_size)  + \"-kWh battery.\"\n",
+    "        return long_name.title()"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -487,9 +734,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "outputs": [],
-   "source": [],
+   "source": [
+    "#Battery类，是ElectricCar的一个组件\n",
+    "class Battery():\n",
+    "    \"\"\"一次模拟电动汽车电瓶的简单尝试.\"\"\"\n",
+    "\n",
+    "    def __init__(self, battery_size=70):\n",
+    "        \"\"\"初始化电瓶的属性.\"\"\"\n",
+    "        self.battery_size = battery_size\n",
+    "\n",
+    "    def describe_battery(self):\n",
+    "        \"\"\"打印一条描述电瓶容量的消息.\"\"\"\n",
+    "        print(\"This car has a \" + str(self.battery_size) + \"-kWh battery.\")\n",
+    "\n",
+    "    def get_range(self):\n",
+    "        \"\"\"打印关于电池提供的范围的声明.\"\"\"\n",
+    "        if self.battery_size == 70:\n",
+    "            range = 240\n",
+    "        elif self.battery_size == 85:\n",
+    "            range = 270\n",
+    "        message = \"This car can go approximately \" + str(range)\n",
+    "        message += \" miles on a full charge.\"\n",
+    "        print(message)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2015 Tesla Roadster 70-Kwh Battery.\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_tesla = ElectricCar('tesla', 'roadster', 2015)\n",
+    "name = my_tesla.get_descriptive_name()\n",
+    "print(name)\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
